--- a/Makefile.reversead
+++ b/Makefile.reversead
@@ -3,7 +3,7 @@
 # To compile without -lstdc++ needed use (g++) -fno-rtti -fno-exceptions
 # -fno-threadsafe-statics. Note the last option.
 
-REVERSEADPATH=$(HOME)/packages/reversead
+REVERSEADPATH=/Users/wang970/packages/reversead
 # C++ compiler and flags
 CXX=g++
 CC=g++
